fixed horizontal scroll, cleaned up css

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,3 @@
 @plugin "daisyui" {
   themes: light --default, light --preferslight;
 }
-
-li {
-  color: #8b8d98;
-}
