--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,3 @@
   background-size: 200% 200%;
   animation: gradient-shift 8s ease infinite;
 }
-
-body {
-  color: #1e2234;
-}
